src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> expression
Rule 1     expression -> LPAREN ADD expression expression RPAREN
Rule 2     expression -> LPAREN SUB expression expression RPAREN
Rule 3     expression -> LPAREN MUL expression expression RPAREN
Rule 4     expression -> LPAREN DIV expression expression RPAREN
Rule 5     expression -> LPAREN EQ_Q expression expression RPAREN
Rule 6     expression -> lambda
Rule 7     expression -> quote
Rule 8     expression -> item
Rule 9     expression -> pair
Rule 10    expression -> apply
Rule 11    expression -> define
Rule 12    expression -> LPAREN CDR pair RPAREN
Rule 13    expression -> LPAREN CDR quote RPAREN
Rule 14    expression -> LPAREN COND condition RPAREN
Rule 15    expression -> LPAREN CAR pair RPAREN
Rule 16    expression -> LPAREN CAR quote RPAREN
Rule 17    expression -> LPAREN ATOM_Q expression RPAREN
Rule 18    quote -> LPAREN QUOTE quote_items RPAREN
Rule 19    quote_items -> expression quote_items
Rule 20    quote_items -> expression
Rule 21    pair -> LPAREN CONS expression expression RPAREN
Rule 22    define -> LPAREN DEFINE NAME expression RPAREN
Rule 23    lambda -> LPAREN LAMBDA LPAREN args RPAREN expression RPAREN
Rule 24    apply -> LPAREN lambda args RPAREN
Rule 25    apply -> LPAREN NAME args RPAREN
Rule 26    condition -> LPAREN LPAREN expression expression RPAREN RPAREN
Rule 27    condition -> LPAREN expression expression condition RPAREN
Rule 28    args -> args item
Rule 29    args -> item
Rule 30    item -> NUMBER
Rule 31    item -> NAME
Rule 32    item -> NIL

Terminals, with rules where they appear

ADD                  : 1
ATOM_Q               : 17
CAR                  : 15 16
CDR                  : 12 13
COND                 : 14
CONS                 : 21
DEFINE               : 22
DIV                  : 4
EQ_Q                 : 5
LAMBDA               : 23
LPAREN               : 1 2 3 4 5 12 13 14 15 16 17 18 21 22 23 23 24 25 26 26 27
MUL                  : 3
NAME                 : 22 25 31
NIL                  : 32
NUMBER               : 30
QUOTE                : 18
RPAREN               : 1 2 3 4 5 12 13 14 15 16 17 18 21 22 23 23 24 25 26 26 27
SUB                  : 2
error                : 

Nonterminals, with rules where they appear

apply                : 10
args                 : 23 24 25 28
condition            : 14 27
define               : 11
expression           : 1 1 2 2 3 3 4 4 5 5 17 19 20 21 21 22 23 26 26 27 27 0
item                 : 8 28 29
lambda               : 6 24
pair                 : 9 12 15
quote                : 7 13 16
quote_items          : 18 19

Parsing method: LALR

state 0

    (0) S' -> . expression
    (1) expression -> . LPAREN ADD expression expression RPAREN
    (2) expression -> . LPAREN SUB expression expression RPAREN
    (3) expression -> . LPAREN MUL expression expression RPAREN
    (4) expression -> . LPAREN DIV expression expression RPAREN
    (5) expression -> . LPAREN EQ_Q expression expression RPAREN
    (6) expression -> . lambda
    (7) expression -> . quote
    (8) expression -> . item
    (9) expression -> . pair
    (10) expression -> . apply
    (11) expression -> . define
    (12) expression -> . LPAREN CDR pair RPAREN
    (13) expression -> . LPAREN CDR quote RPAREN
    (14) expression -> . LPAREN COND condition RPAREN
    (15) expression -> . LPAREN CAR pair RPAREN
    (16) expression -> . LPAREN CAR quote RPAREN
    (17) expression -> . LPAREN ATOM_Q expression RPAREN
    (23) lambda -> . LPAREN LAMBDA LPAREN args RPAREN expression RPAREN
    (18) quote -> . LPAREN QUOTE quote_items RPAREN
    (30) item -> . NUMBER
    (31) item -> . NAME
    (32) item -> . NIL
    (21) pair -> . LPAREN CONS expression expression RPAREN
    (24) apply -> . LPAREN lambda args RPAREN
    (25) apply -> . LPAREN NAME args RPAREN
    (22) define -> . LPAREN DEFINE NAME expression RPAREN

    LPAREN          shift and go to state 2
    NUMBER          shift and go to state 9
    NAME            shift and go to state 10
    NIL             shift and go to state 11

    expression                     shift and go to state 1
    lambda                         shift and go to state 3
    quote                          shift and go to state 4
    item                           shift and go to state 5
    pair                           shift and go to state 6
    apply                          shift and go to state 7
    define                         shift and go to state 8

state 1

    (0) S' -> expression .



state 2

    (1) expression -> LPAREN . ADD expression expression RPAREN
    (2) expression -> LPAREN . SUB expression expression RPAREN
    (3) expression -> LPAREN . MUL expression expression RPAREN
    (4) expression -> LPAREN . DIV expression expression RPAREN
    (5) expression -> LPAREN . EQ_Q expression expression RPAREN
    (12) expression -> LPAREN . CDR pair RPAREN
    (13) expression -> LPAREN . CDR quote RPAREN
    (14) expression -> LPAREN . COND condition RPAREN
    (15) expression -> LPAREN . CAR pair RPAREN
    (16) expression -> LPAREN . CAR quote RPAREN
    (17) expression -> LPAREN . ATOM_Q expression RPAREN
    (23) lambda -> LPAREN . LAMBDA LPAREN args RPAREN expression RPAREN
    (18) quote -> LPAREN . QUOTE quote_items RPAREN
    (21) pair -> LPAREN . CONS expression expression RPAREN
    (24) apply -> LPAREN . lambda args RPAREN
    (25) apply -> LPAREN . NAME args RPAREN
    (22) define -> LPAREN . DEFINE NAME expression RPAREN
    (23) lambda -> . LPAREN LAMBDA LPAREN args RPAREN expression RPAREN

    ADD             shift and go to state 13
    SUB             shift and go to state 14
    MUL             shift and go to state 15
    DIV             shift and go to state 16
    EQ_Q            shift and go to state 17
    CDR             shift and go to state 18
    COND            shift and go to state 19
    CAR             shift and go to state 20
    ATOM_Q          shift and go to state 21
    LAMBDA          shift and go to state 22
    QUOTE           shift and go to state 23
    CONS            shift and go to state 24
    NAME            shift and go to state 26
    DEFINE          shift and go to state 27
    LPAREN          shift and go to state 12

    lambda                         shift and go to state 25

state 3

    (6) expression -> lambda .

    $end            reduce using rule 6 (expression -> lambda .)
    LPAREN          reduce using rule 6 (expression -> lambda .)
    NUMBER          reduce using rule 6 (expression -> lambda .)
    NAME            reduce using rule 6 (expression -> lambda .)
    NIL             reduce using rule 6 (expression -> lambda .)
    RPAREN          reduce using rule 6 (expression -> lambda .)


state 4

    (7) expression -> quote .

    $end            reduce using rule 7 (expression -> quote .)
    LPAREN          reduce using rule 7 (expression -> quote .)
    NUMBER          reduce using rule 7 (expression -> quote .)
    NAME            reduce using rule 7 (expression -> quote .)
    NIL             reduce using rule 7 (expression -> quote .)
    RPAREN          reduce using rule 7 (expression -> quote .)


state 5

    (8) expression -> item .

    $end            reduce using rule 8 (expression -> item .)
    LPAREN          reduce using rule 8 (expression -> item .)
    NUMBER          reduce using rule 8 (expression -> item .)
    NAME            reduce using rule 8 (expression -> item .)
    NIL             reduce using rule 8 (expression -> item .)
    RPAREN          reduce using rule 8 (expression -> item .)


state 6

    (9) expression -> pair .

    $end            reduce using rule 9 (expression -> pair .)
    LPAREN          reduce using rule 9 (expression -> pair .)
    NUMBER          reduce using rule 9 (expression -> pair .)
    NAME            reduce using rule 9 (expression -> pair .)
    NIL             reduce using rule 9 (expression -> pair .)
    RPAREN          reduce using rule 9 (expression -> pair .)


state 7

    (10) expression -> apply .

    $end            reduce using rule 10 (expression -> apply .)
    LPAREN          reduce using rule 10 (expression -> apply .)
    NUMBER          reduce using rule 10 (expression -> apply .)
    NAME            reduce using rule 10 (expression -> apply .)
    NIL             reduce using rule 10 (expression -> apply .)
    RPAREN          reduce using rule 10 (expression -> apply .)


state 8

    (11) expression -> define .

    $end            reduce using rule 11 (expression -> define .)
    LPAREN          reduce using rule 11 (expression -> define .)
    NUMBER          reduce using rule 11 (expression -> define .)
    NAME            reduce using rule 11 (expression -> define .)
    NIL             reduce using rule 11 (expression -> define .)
    RPAREN          reduce using rule 11 (expression -> define .)


state 9

    (30) item -> NUMBER .

    $end            reduce using rule 30 (item -> NUMBER .)
    LPAREN          reduce using rule 30 (item -> NUMBER .)
    NUMBER          reduce using rule 30 (item -> NUMBER .)
    NAME            reduce using rule 30 (item -> NUMBER .)
    NIL             reduce using rule 30 (item -> NUMBER .)
    RPAREN          reduce using rule 30 (item -> NUMBER .)


state 10

    (31) item -> NAME .

    $end            reduce using rule 31 (item -> NAME .)
    LPAREN          reduce using rule 31 (item -> NAME .)
    NUMBER          reduce using rule 31 (item -> NAME .)
    NAME            reduce using rule 31 (item -> NAME .)
    NIL             reduce using rule 31 (item -> NAME .)
    RPAREN          reduce using rule 31 (item -> NAME .)


state 11

    (32) item -> NIL .

    $end            reduce using rule 32 (item -> NIL .)
    LPAREN          reduce using rule 32 (item -> NIL .)
    NUMBER          reduce using rule 32 (item -> NIL .)
    NAME            reduce using rule 32 (item -> NIL .)
    NIL             reduce using rule 32 (item -> NIL .)
    RPAREN          reduce using rule 32 (item -> NIL .)


state 12

    (23) lambda -> LPAREN . LAMBDA LPAREN args RPAREN expression RPAREN

    LAMBDA          shift and go to state 22


state 13

    (1) expression -> LPAREN ADD . expression expression RPAREN
    (1) expression -> . LPAREN ADD expression expression RPAREN
    (2) expression -> . LPAREN SUB expression expression RPAREN
    (3) expression -> . LPAREN MUL expression expression RPAREN
    (4) expression -> . LPAREN DIV expression expression RPAREN
    (5) expression -> . LPAREN EQ_Q expression expression RPAREN
    (6) expression -> . lambda
    (7) expression -> . quote
    (8) expression -> . item
    (9) expression -> . pair
    (10) expression -> . apply
    (11) expression -> . define
    (12) expression -> . LPAREN CDR pair RPAREN
    (13) expression -> . LPAREN CDR quote RPAREN
    (14) expression -> . LPAREN COND condition RPAREN
    (15) expression -> . LPAREN CAR pair RPAREN
    (16) expression -> . LPAREN CAR quote RPAREN
    (17) expression -> . LPAREN ATOM_Q expression RPAREN
    (23) lambda -> . LPAREN LAMBDA LPAREN args RPAREN expression RPAREN
    (18) quote -> . LPAREN QUOTE quote_items RPAREN
    (30) item -> . NUMBER
    (31) item -> . NAME
    (32) item -> . NIL
    (21) pair -> . LPAREN CONS expression expression RPAREN
    (24) apply -> . LPAREN lambda args RPAREN
    (25) apply -> . LPAREN NAME args RPAREN
    (22) define -> . LPAREN DEFINE NAME expression RPAREN

    LPAREN          shift and go to state 2
    NUMBER          shift and go to state 9
    NAME            shift and go to state 10
    NIL             shift and go to state 11

    expression                     shift and go to state 28
    lambda                         shift and go to state 3
    quote                          shift and go to state 4
    item                           shift and go to state 5
    pair                           shift and go to state 6
    apply                          shift and go to state 7
    define                         shift and go to state 8

state 14

    (2) expression -> LPAREN SUB . expression expression RPAREN
    (1) expression -> . LPAREN ADD expression expression RPAREN
    (2) expression -> . LPAREN SUB expression expression RPAREN
    (3) expression -> . LPAREN MUL expression expression RPAREN
    (4) expression -> . LPAREN DIV expression expression RPAREN
    (5) expression -> . LPAREN EQ_Q expression expression RPAREN
    (6) expression -> . lambda
    (7) expression -> . quote
    (8) expression -> . item
    (9) expression -> . pair
    (10) expression -> . apply
    (11) expression -> . define
    (12) expression -> . LPAREN CDR pair RPAREN
    (13) expression -> . LPAREN CDR quote RPAREN
    (14) expression -> . LPAREN COND condition RPAREN
    (15) expression -> . LPAREN CAR pair RPAREN
    (16) expression -> . LPAREN CAR quote RPAREN
    (17) expression -> . LPAREN ATOM_Q expression RPAREN
    (23) lambda -> . LPAREN LAMBDA LPAREN args RPAREN expression RPAREN
    (18) quote -> . LPAREN QUOTE quote_items RPAREN
    (30) item -> . NUMBER
    (31) item -> . NAME
    (32) item -> . NIL
    (21) pair -> . LPAREN CONS expression expression RPAREN
    (24) apply -> . LPAREN lambda args RPAREN
    (25) apply -> . LPAREN NAME args RPAREN
    (22) define -> . LPAREN DEFINE NAME expression RPAREN

    LPAREN          shift and go to state 2
    NUMBER          shift and go to state 9
    NAME            shift and go to state 10
    NIL             shift and go to state 11

    expression                     shift and go to state 29
    lambda                         shift and go to state 3
    quote                          shift and go to state 4
    item                           shift and go to state 5
    pair                           shift and go to state 6
    apply                          shift and go to state 7
    define                         shift and go to state 8

state 15

    (3) expression -> LPAREN MUL . expression expression RPAREN
    (1) expression -> . LPAREN ADD expression expression RPAREN
    (2) expression -> . LPAREN SUB expression expression RPAREN
    (3) expression -> . LPAREN MUL expression expression RPAREN
    (4) expression -> . LPAREN DIV expression expression RPAREN
    (5) expression -> . LPAREN EQ_Q expression expression RPAREN
    (6) expression -> . lambda
    (7) expression -> . quote
    (8) expression -> . item
    (9) expression -> . pair
    (10) expression -> . apply
    (11) expression -> . define
    (12) expression -> . LPAREN CDR pair RPAREN
    (13) expression -> . LPAREN CDR quote RPAREN
    (14) expression -> . LPAREN COND condition RPAREN
    (15) expression -> . LPAREN CAR pair RPAREN
    (16) expression -> . LPAREN CAR quote RPAREN
    (17) expression -> . LPAREN ATOM_Q expression RPAREN
    (23) lambda -> . LPAREN LAMBDA LPAREN args RPAREN expression RPAREN
    (18) quote -> . LPAREN QUOTE quote_items RPAREN
    (30) item -> . NUMBER
    (31) item -> . NAME
    (32) item -> . NIL
    (21) pair -> . LPAREN CONS expression expression RPAREN
    (24) apply -> . LPAREN lambda args RPAREN
    (25) apply -> . LPAREN NAME args RPAREN
    (22) define -> . LPAREN DEFINE NAME expression RPAREN

    LPAREN          shift and go to state 2
    NUMBER          shift and go to state 9
    NAME            shift and go to state 10
    NIL             shift and go to state 11

    expression                     shift and go to state 30
    lambda                         shift and go to state 3
    quote                          shift and go to state 4
    item                           shift and go to state 5
    pair                           shift and go to state 6
    apply                          shift and go to state 7
    define                         shift and go to state 8

state 16

    (4) expression -> LPAREN DIV . expression expression RPAREN
    (1) expression -> . LPAREN ADD expression expression RPAREN
    (2) expression -> . LPAREN SUB expression expression RPAREN
    (3) expression -> . LPAREN MUL expression expression RPAREN
    (4) expression -> . LPAREN DIV expression expression RPAREN
    (5) expression -> . LPAREN EQ_Q expression expression RPAREN
    (6) expression -> . lambda
    (7) expression -> . quote
    (8) expression -> . item
    (9) expression -> . pair
    (10) expression -> . apply
    (11) expression -> . define
    (12) expression -> . LPAREN CDR pair RPAREN
    (13) expression -> . LPAREN CDR quote RPAREN
    (14) expression -> . LPAREN COND condition RPAREN
    (15) expression -> . LPAREN CAR pair RPAREN
    (16) expression -> . LPAREN CAR quote RPAREN
    (17) expression -> . LPAREN ATOM_Q expression RPAREN
    (23) lambda -> . LPAREN LAMBDA LPAREN args RPAREN expression RPAREN
    (18) quote -> . LPAREN QUOTE quote_items RPAREN
    (30) item -> . NUMBER
    (31) item -> . NAME
    (32) item -> . NIL
    (21) pair -> . LPAREN CONS expression expression RPAREN
    (24) apply -> . LPAREN lambda args RPAREN
    (25) apply -> . LPAREN NAME args RPAREN
    (22) define -> . LPAREN DEFINE NAME expression RPAREN

    LPAREN          shift and go to state 2
    NUMBER          shift and go to state 9
    NAME            shift and go to state 10
    NIL             shift and go to state 11

    expression                     shift and go to state 31
    lambda                         shift and go to state 3
    quote                          shift and go to state 4
    item                           shift and go to state 5
    pair                           shift and go to state 6
    apply                          shift and go to state 7
    define                         shift and go to state 8

state 17

    (5) expression -> LPAREN EQ_Q . expression expression RPAREN
    (1) expression -> . LPAREN ADD expression expression RPAREN
    (2) expression -> . LPAREN SUB expression expression RPAREN
    (3) expression -> . LPAREN MUL expression expression RPAREN
    (4) expression -> . LPAREN DIV expression expression RPAREN
    (5) expression -> . LPAREN EQ_Q expression expression RPAREN
    (6) expression -> . lambda
    (7) expression -> . quote
    (8) expression -> . item
    (9) expression -> . pair
    (10) expression -> . apply
    (11) expression -> . define
    (12) expression -> . LPAREN CDR pair RPAREN
    (13) expression -> . LPAREN CDR quote RPAREN
    (14) expression -> . LPAREN COND condition RPAREN
    (15) expression -> . LPAREN CAR pair RPAREN
    (16) expression -> . LPAREN CAR quote RPAREN
    (17) expression -> . LPAREN ATOM_Q expression RPAREN
    (23) lambda -> . LPAREN LAMBDA LPAREN args RPAREN expression RPAREN
    (18) quote -> . LPAREN QUOTE quote_items RPAREN
    (30) item -> . NUMBER
    (31) item -> . NAME
    (32) item -> . NIL
    (21) pair -> . LPAREN CONS expression expression RPAREN
    (24) apply -> . LPAREN lambda args RPAREN
    (25) apply -> . LPAREN NAME args RPAREN
    (22) define -> . LPAREN DEFINE NAME expression RPAREN

    LPAREN          shift and go to state 2
    NUMBER          shift and go to state 9
    NAME            shift and go to state 10
    NIL             shift and go to state 11

    expression                     shift and go to state 32
    lambda                         shift and go to state 3
    quote                          shift and go to state 4
    item                           shift and go to state 5
    pair                           shift and go to state 6
    apply                          shift and go to state 7
    define                         shift and go to state 8

state 18

    (12) expression -> LPAREN CDR . pair RPAREN
    (13) expression -> LPAREN CDR . quote RPAREN
    (21) pair -> . LPAREN CONS expression expression RPAREN
    (18) quote -> . LPAREN QUOTE quote_items RPAREN

    LPAREN          shift and go to state 33

    pair                           shift and go to state 34
    quote                          shift and go to state 35

state 19

    (14) expression -> LPAREN COND . condition RPAREN
    (26) condition -> . LPAREN LPAREN expression expression RPAREN RPAREN
    (27) condition -> . LPAREN expression expression condition RPAREN

    LPAREN          shift and go to state 36

    condition                      shift and go to state 37

state 20

    (15) expression -> LPAREN CAR . pair RPAREN
    (16) expression -> LPAREN CAR . quote RPAREN
    (21) pair -> . LPAREN CONS expression expression RPAREN
    (18) quote -> . LPAREN QUOTE quote_items RPAREN

    LPAREN          shift and go to state 33

    pair                           shift and go to state 38
    quote                          shift and go to state 39

state 21

    (17) expression -> LPAREN ATOM_Q . expression RPAREN
    (1) expression -> . LPAREN ADD expression expression RPAREN
    (2) expression -> . LPAREN SUB expression expression RPAREN
    (3) expression -> . LPAREN MUL expression expression RPAREN
    (4) expression -> . LPAREN DIV expression expression RPAREN
    (5) expression -> . LPAREN EQ_Q expression expression RPAREN
    (6) expression -> . lambda
    (7) expression -> . quote
    (8) expression -> . item
    (9) expression -> . pair
    (10) expression -> . apply
    (11) expression -> . define
    (12) expression -> . LPAREN CDR pair RPAREN
    (13) expression -> . LPAREN CDR quote RPAREN
    (14) expression -> . LPAREN COND condition RPAREN
    (15) expression -> . LPAREN CAR pair RPAREN
    (16) expression -> . LPAREN CAR quote RPAREN
    (17) expression -> . LPAREN ATOM_Q expression RPAREN
    (23) lambda -> . LPAREN LAMBDA LPAREN args RPAREN expression RPAREN
    (18) quote -> . LPAREN QUOTE quote_items RPAREN
    (30) item -> . NUMBER
    (31) item -> . NAME
    (32) item -> . NIL
    (21) pair -> . LPAREN CONS expression expression RPAREN
    (24) apply -> . LPAREN lambda args RPAREN
    (25) apply -> . LPAREN NAME args RPAREN
    (22) define -> . LPAREN DEFINE NAME expression RPAREN

    LPAREN          shift and go to state 2
    NUMBER          shift and go to state 9
    NAME            shift and go to state 10
    NIL             shift and go to state 11

    expression                     shift and go to state 40
    lambda                         shift and go to state 3
    quote                          shift and go to state 4
    item                           shift and go to state 5
    pair                           shift and go to state 6
    apply                          shift and go to state 7
    define                         shift and go to state 8

state 22

    (23) lambda -> LPAREN LAMBDA . LPAREN args RPAREN expression RPAREN

    LPAREN          shift and go to state 41


state 23

    (18) quote -> LPAREN QUOTE . quote_items RPAREN
    (19) quote_items -> . expression quote_items
    (20) quote_items -> . expression
    (1) expression -> . LPAREN ADD expression expression RPAREN
    (2) expression -> . LPAREN SUB expression expression RPAREN
    (3) expression -> . LPAREN MUL expression expression RPAREN
    (4) expression -> . LPAREN DIV expression expression RPAREN
    (5) expression -> . LPAREN EQ_Q expression expression RPAREN
    (6) expression -> . lambda
    (7) expression -> . quote
    (8) expression -> . item
    (9) expression -> . pair
    (10) expression -> . apply
    (11) expression -> . define
    (12) expression -> . LPAREN CDR pair RPAREN
    (13) expression -> . LPAREN CDR quote RPAREN
    (14) expression -> . LPAREN COND condition RPAREN
    (15) expression -> . LPAREN CAR pair RPAREN
    (16) expression -> . LPAREN CAR quote RPAREN
    (17) expression -> . LPAREN ATOM_Q expression RPAREN
    (23) lambda -> . LPAREN LAMBDA LPAREN args RPAREN expression RPAREN
    (18) quote -> . LPAREN QUOTE quote_items RPAREN
    (30) item -> . NUMBER
    (31) item -> . NAME
    (32) item -> . NIL
    (21) pair -> . LPAREN CONS expression expression RPAREN
    (24) apply -> . LPAREN lambda args RPAREN
    (25) apply -> . LPAREN NAME args RPAREN
    (22) define -> . LPAREN DEFINE NAME expression RPAREN

    LPAREN          shift and go to state 2
    NUMBER          shift and go to state 9
    NAME            shift and go to state 10
    NIL             shift and go to state 11

    quote_items                    shift and go to state 42
    expression                     shift and go to state 43
    lambda                         shift and go to state 3
    quote                          shift and go to state 4
    item                           shift and go to state 5
    pair                           shift and go to state 6
    apply                          shift and go to state 7
    define                         shift and go to state 8

state 24

    (21) pair -> LPAREN CONS . expression expression RPAREN
    (1) expression -> . LPAREN ADD expression expression RPAREN
    (2) expression -> . LPAREN SUB expression expression RPAREN
    (3) expression -> . LPAREN MUL expression expression RPAREN
    (4) expression -> . LPAREN DIV expression expression RPAREN
    (5) expression -> . LPAREN EQ_Q expression expression RPAREN
    (6) expression -> . lambda
    (7) expression -> . quote
    (8) expression -> . item
    (9) expression -> . pair
    (10) expression -> . apply
    (11) expression -> . define
    (12) expression -> . LPAREN CDR pair RPAREN
    (13) expression -> . LPAREN CDR quote RPAREN
    (14) expression -> . LPAREN COND condition RPAREN
    (15) expression -> . LPAREN CAR pair RPAREN
    (16) expression -> . LPAREN CAR quote RPAREN
    (17) expression -> . LPAREN ATOM_Q expression RPAREN
    (23) lambda -> . LPAREN LAMBDA LPAREN args RPAREN expression RPAREN
    (18) quote -> . LPAREN QUOTE quote_items RPAREN
    (30) item -> . NUMBER
    (31) item -> . NAME
    (32) item -> . NIL
    (21) pair -> . LPAREN CONS expression expression RPAREN
    (24) apply -> . LPAREN lambda args RPAREN
    (25) apply -> . LPAREN NAME args RPAREN
    (22) define -> . LPAREN DEFINE NAME expression RPAREN

    LPAREN          shift and go to state 2
    NUMBER          shift and go to state 9
    NAME            shift and go to state 10
    NIL             shift and go to state 11

    expression                     shift and go to state 44
    lambda                         shift and go to state 3
    quote                          shift and go to state 4
    item                           shift and go to state 5
    pair                           shift and go to state 6
    apply                          shift and go to state 7
    define                         shift and go to state 8

state 25

    (24) apply -> LPAREN lambda . args RPAREN
    (28) args -> . args item
    (29) args -> . item
    (30) item -> . NUMBER
    (31) item -> . NAME
    (32) item -> . NIL

    NUMBER          shift and go to state 9
    NAME            shift and go to state 10
    NIL             shift and go to state 11

    args                           shift and go to state 45
    item                           shift and go to state 46

state 26

    (25) apply -> LPAREN NAME . args RPAREN
    (28) args -> . args item
    (29) args -> . item
    (30) item -> . NUMBER
    (31) item -> . NAME
    (32) item -> . NIL

    NUMBER          shift and go to state 9
    NAME            shift and go to state 10
    NIL             shift and go to state 11

    args                           shift and go to state 47
    item                           shift and go to state 46

state 27

    (22) define -> LPAREN DEFINE . NAME expression RPAREN

    NAME            shift and go to state 48


state 28

    (1) expression -> LPAREN ADD expression . expression RPAREN
    (1) expression -> . LPAREN ADD expression expression RPAREN
    (2) expression -> . LPAREN SUB expression expression RPAREN
    (3) expression -> . LPAREN MUL expression expression RPAREN
    (4) expression -> . LPAREN DIV expression expression RPAREN
    (5) expression -> . LPAREN EQ_Q expression expression RPAREN
    (6) expression -> . lambda
    (7) expression -> . quote
    (8) expression -> . item
    (9) expression -> . pair
    (10) expression -> . apply
    (11) expression -> . define
    (12) expression -> . LPAREN CDR pair RPAREN
    (13) expression -> . LPAREN CDR quote RPAREN
    (14) expression -> . LPAREN COND condition RPAREN
    (15) expression -> . LPAREN CAR pair RPAREN
    (16) expression -> . LPAREN CAR quote RPAREN
    (17) expression -> . LPAREN ATOM_Q expression RPAREN
    (23) lambda -> . LPAREN LAMBDA LPAREN args RPAREN expression RPAREN
    (18) quote -> . LPAREN QUOTE quote_items RPAREN
    (30) item -> . NUMBER
    (31) item -> . NAME
    (32) item -> . NIL
    (21) pair -> . LPAREN CONS expression expression RPAREN
    (24) apply -> . LPAREN lambda args RPAREN
    (25) apply -> . LPAREN NAME args RPAREN
    (22) define -> . LPAREN DEFINE NAME expression RPAREN

    LPAREN          shift and go to state 2
    NUMBER          shift and go to state 9
    NAME            shift and go to state 10
    NIL             shift and go to state 11

    expression                     shift and go to state 49
    lambda                         shift and go to state 3
    quote                          shift and go to state 4
    item                           shift and go to state 5
    pair                           shift and go to state 6
    apply                          shift and go to state 7
    define                         shift and go to state 8

state 29

    (2) expression -> LPAREN SUB expression . expression RPAREN
    (1) expression -> . LPAREN ADD expression expression RPAREN
    (2) expression -> . LPAREN SUB expression expression RPAREN
    (3) expression -> . LPAREN MUL expression expression RPAREN
    (4) expression -> . LPAREN DIV expression expression RPAREN
    (5) expression -> . LPAREN EQ_Q expression expression RPAREN
    (6) expression -> . lambda
    (7) expression -> . quote
    (8) expression -> . item
    (9) expression -> . pair
    (10) expression -> . apply
    (11) expression -> . define
    (12) expression -> . LPAREN CDR pair RPAREN
    (13) expression -> . LPAREN CDR quote RPAREN
    (14) expression -> . LPAREN COND condition RPAREN
    (15) expression -> . LPAREN CAR pair RPAREN
    (16) expression -> . LPAREN CAR quote RPAREN
    (17) expression -> . LPAREN ATOM_Q expression RPAREN
    (23) lambda -> . LPAREN LAMBDA LPAREN args RPAREN expression RPAREN
    (18) quote -> . LPAREN QUOTE quote_items RPAREN
    (30) item -> . NUMBER
    (31) item -> . NAME
    (32) item -> . NIL
    (21) pair -> . LPAREN CONS expression expression RPAREN
    (24) apply -> . LPAREN lambda args RPAREN
    (25) apply -> . LPAREN NAME args RPAREN
    (22) define -> . LPAREN DEFINE NAME expression RPAREN

    LPAREN          shift and go to state 2
    NUMBER          shift and go to state 9
    NAME            shift and go to state 10
    NIL             shift and go to state 11

    expression                     shift and go to state 50
    lambda                         shift and go to state 3
    quote                          shift and go to state 4
    item                           shift and go to state 5
    pair                           shift and go to state 6
    apply                          shift and go to state 7
    define                         shift and go to state 8

state 30

    (3) expression -> LPAREN MUL expression . expression RPAREN
    (1) expression -> . LPAREN ADD expression expression RPAREN
    (2) expression -> . LPAREN SUB expression expression RPAREN
    (3) expression -> . LPAREN MUL expression expression RPAREN
    (4) expression -> . LPAREN DIV expression expression RPAREN
    (5) expression -> . LPAREN EQ_Q expression expression RPAREN
    (6) expression -> . lambda
    (7) expression -> . quote
    (8) expression -> . item
    (9) expression -> . pair
    (10) expression -> . apply
    (11) expression -> . define
    (12) expression -> . LPAREN CDR pair RPAREN
    (13) expression -> . LPAREN CDR quote RPAREN
    (14) expression -> . LPAREN COND condition RPAREN
    (15) expression -> . LPAREN CAR pair RPAREN
    (16) expression -> . LPAREN CAR quote RPAREN
    (17) expression -> . LPAREN ATOM_Q expression RPAREN
    (23) lambda -> . LPAREN LAMBDA LPAREN args RPAREN expression RPAREN
    (18) quote -> . LPAREN QUOTE quote_items RPAREN
    (30) item -> . NUMBER
    (31) item -> . NAME
    (32) item -> . NIL
    (21) pair -> . LPAREN CONS expression expression RPAREN
    (24) apply -> . LPAREN lambda args RPAREN
    (25) apply -> . LPAREN NAME args RPAREN
    (22) define -> . LPAREN DEFINE NAME expression RPAREN

    LPAREN          shift and go to state 2
    NUMBER          shift and go to state 9
    NAME            shift and go to state 10
    NIL             shift and go to state 11

    expression                     shift and go to state 51
    lambda                         shift and go to state 3
    quote                          shift and go to state 4
    item                           shift and go to state 5
    pair                           shift and go to state 6
    apply                          shift and go to state 7
    define                         shift and go to state 8

state 31

    (4) expression -> LPAREN DIV expression . expression RPAREN
    (1) expression -> . LPAREN ADD expression expression RPAREN
    (2) expression -> . LPAREN SUB expression expression RPAREN
    (3) expression -> . LPAREN MUL expression expression RPAREN
    (4) expression -> . LPAREN DIV expression expression RPAREN
    (5) expression -> . LPAREN EQ_Q expression expression RPAREN
    (6) expression -> . lambda
    (7) expression -> . quote
    (8) expression -> . item
    (9) expression -> . pair
    (10) expression -> . apply
    (11) expression -> . define
    (12) expression -> . LPAREN CDR pair RPAREN
    (13) expression -> . LPAREN CDR quote RPAREN
    (14) expression -> . LPAREN COND condition RPAREN
    (15) expression -> . LPAREN CAR pair RPAREN
    (16) expression -> . LPAREN CAR quote RPAREN
    (17) expression -> . LPAREN ATOM_Q expression RPAREN
    (23) lambda -> . LPAREN LAMBDA LPAREN args RPAREN expression RPAREN
    (18) quote -> . LPAREN QUOTE quote_items RPAREN
    (30) item -> . NUMBER
    (31) item -> . NAME
    (32) item -> . NIL
    (21) pair -> . LPAREN CONS expression expression RPAREN
    (24) apply -> . LPAREN lambda args RPAREN
    (25) apply -> . LPAREN NAME args RPAREN
    (22) define -> . LPAREN DEFINE NAME expression RPAREN

    LPAREN          shift and go to state 2
    NUMBER          shift and go to state 9
    NAME            shift and go to state 10
    NIL             shift and go to state 11

    expression                     shift and go to state 52
    lambda                         shift and go to state 3
    quote                          shift and go to state 4
    item                           shift and go to state 5
    pair                           shift and go to state 6
    apply                          shift and go to state 7
    define                         shift and go to state 8

state 32
